syntax = "proto3";
package oid4vc;

import "google/protobuf/any.proto";

service OID4VCI {
  rpc CreateOffer (OfferConfig) returns (Request) {}
}

message OfferConfig {
  repeated string credentials = 1;
}

message Request {
  string uri = 1;
  google.protobuf.Any offer = 2;
}